8 November 2022: Wouter
	- Fix to ignore tcp events for closed comm points.

21 October 2022: George
	- Merge #767 from jonathangray: consistently use IPv4/IPv6 in
	  unbound.conf.5.

21 October 2022: Wouter
	- Fix that cachedb does not store failures in the external cache.

18 October 2022: George
	- Clarify the use of MAX_SENT_COUNT in the iterator code.

17 October 2022: Wouter
	- testcode/dohclient sets log identity to its name.

14 October 2022: Wouter
	- Merge #768 from fobser: Arithmetic on a pointer to void is a GNU
	  extension.
	- In unit test, print python script name list correctly.

13 October 2022: Wouter
	- Tag for 1.17.0 release. The code repository continues with 1.17.1.

11 October 2022: George
	- Fix PROXYv2 header read for TCP connections when no proxied addresses
	  are provided.

7 October 2022: Wouter
	- Tag for 1.17.0rc1 release.

7 October 2022: George
	- Fix to stop possible loops in the tcp reuse code (write_wait list
	  and tcp_wait list). Based on analysis and patch from Prad Seniappan
	  and Karthik Umashankar.
	- Fix unit test to properly test the reuse_write_wait_pop function.

6 October 2022: Wouter
	- Fix to stop responses with TC flag from resulting in partial
	  responses. It retries to fetch the data elsewhere, or fails the
	  query and in depth fix removes the TC flag from the cached item.
	- Fix proxy length debug output printout typecasts.

5 October 2022: Wouter
	- Fix dnscrypt compile for proxy protocol code changes.

5 October 2022: George
	- Use DEBUG_TDIR from environment in mini_tdir.sh for debugging.
	- Fix string comparison in mini_tdir.sh.
	- Make ede.tdir test more predictable by using static data.
	- Fix checkconf test for dnscrypt and proxy port.

4 October 2022: George
	- Merge #764: Leniency for target discovery when under load (for
	  NRDelegation changes).

4 October 2022: Wouter
	- Fix static analysis report to remove dead code from the
	  rpz_callback_from_iterator_module function.